# RadeonProRender-Baikal

./: .gitignore  .gitmodules  CMakeLists.txt
Baikal/: CMakeLists.txt
Baikal/Controllers/: clw_scene_controller.cpp  clw_scene_controller.h  scene_controller.h  scene_controller.inl  vkw_probe_controller.cpp  vkw_probe_controller.h  vkw_scene_controller.cpp  vkw_scene_controller.h  vkw_scene_helpers.cpp  vkw_scene_helpers.h  vkw_shadow_controller.cpp  vkw_shadow_controller.h
Baikal/Kernels/CL/: scene.cl
Baikal/Kernels/CL/cache/: kernels.h
Baikal/Kernels/VK/: brdf.glsl  common.glsl  common_structures.glsl  convert_to_cubemap.comp  convert_to_cubemap.comp.spv  copy_rt.frag  copy_rt.frag.spv  cubemap_sh9_downsample.comp.spv  cubemap_sh9_final.comp  cubemap_sh9_final.comp.spv  cubemap_sh9_project.comp.spv  deferred.frag  deferred.frag.spv  deferred.frag.spv.d  deferred.vert  deferred.vert.spv  deferred.vert.spv.d  depth_only.frag  depth_only.frag.spv  depth_only.frag.spv.d  depth_only.vert  depth_only.vert.spv  depth_only.vert.spv.d  edge_detection.frag  edge_detection.frag.spv  fragment_shader_utils.glsl  fullscreen_quad.vert  fullscreen_quad.vert.spv  fullscreen_quad.vert.spv.d  generate_brdf_lut.comp  generate_brdf_lut.comp.spv  generate_cube_mips.comp  generate_cube_mips.comp.spv  generate_spirv.bat  generate_spirv.sh  limits.conf  log_luminance.frag  log_luminance.frag.spv  log_luminance_adapt.frag  log_luminance_adapt.frag.spv  (+19 more)
Baikal/Output/: vkwoutput.h
Baikal/PostEffects/: bilateral_denoiser.h  post_effect.h  wavelet_denoiser.h
Baikal/RenderFactory/: clw_render_factory.cpp  render_factory.h  vkw_render_factory.cpp  vkw_render_factory.h
Baikal/Renderers/: hybrid_renderer.cpp  hybrid_renderer.h  monte_carlo_renderer.cpp  monte_carlo_renderer.h  renderer.h
Baikal/SceneGraph/: material.cpp  material.h  scene1.cpp  scene1.h  shape.cpp  uberv2material.cpp  uberv2material.h  vkwscene.h
Baikal/Utils/: vulkandebug.cpp  vulkandebug.h
BaikalIO/: scene_fbx_io.cpp  scene_obj_io.cpp
BaikalStandalone/: CMakeLists.txt
BaikalStandalone/Application/: app_utils.cpp  app_utils.h  application.cpp  application.h  cl_application.cpp  cl_application.h  cl_render.cpp  cl_render.h  render.cpp  render.h  vk_application.cpp  vk_application.h  vk_render.cpp  vk_render.h
BaikalStandalone/ImGUI/: imgui_impl_glfw_vulkan.h
BaikalStandalone/Utils/: cl_config_manager.cpp  config_manager.cpp  config_manager.h  vk_config_manager.cpp  vk_config_manager.h
BaikalStandaloneRPR/: CMakeLists.txt  baikal_standalone.cap  baikal_standalone_test.cap  main.cpp
BaikalStandaloneRPR/Application/: app_utils.cpp  app_utils.h  application.cpp  application.h  render.cpp  render.h  vk_application.cpp  vk_application.h  vk_render.cpp  vk_render.h
BaikalTest/: aov.h  basic.h  uberv2.h
BaikalUtils/: CMakeLists.txt  cl_config_manager.h  config_manager.h  vk_config_manager.cpp  vk_config_manager.h
Resources/: test_scene.blend  test_scene.blend1
Rpr/: CMakeLists.txt  RadeonProRender.cpp  RadeonProRender.h  RadeonProRender_VK.h
Rpr/WrapObject/: CameraObject.cpp  CameraObject.h  ClContextObject.cpp  ClContextObject.h  ContextObject.cpp  ContextObject.h  FramebufferObject.cpp  FramebufferObject.h  SceneObject.cpp  ShapeObject.cpp  VkContextObject.cpp  VkContextObject.h
Rpr/WrapObject/Materials/: UberMaterialObject.cpp
RprSupport/: RprSupport.cpp
Tools/Jenkins/: build_test.jenkinsfile
